add basic collectors page
